--- a/index.html
+++ b/index.html
@@ -115,13 +115,22 @@
             <i
               ><small><b>Action</b></small></i
             >
-            <p>TODO</p>
+            <p>Create a Restful AWS Lambda API service to generate advanced SQL powered CSV reports for Google Sheets ingestion</p>
+            <p>Use Google Apps Script to generate dynamice Pivot table reports for key data</p>
+            <p>Create a ReactJS static site using GatsbyJS for secure hosting of micro web apps on the Caspio.com platform</p>
+            <p>Migrate an existing monolitic PHP/Jquery web aplication to the AWS platform, implemented with Devops configuration management and a CI/CD pipeline</p>
+            <p>Architect and create new multi enviroment stage AWS VPC environments, migrate to AWS RDS, implement proper application secrets management</p>
+            <p>Develop resilient and cost effective data backup and disaster recovery processes</p>
             <br />
 
             <i
               ><small><b>Result</b></small></i
             >
-            <p>Devsecops, enhance security posture</p>
+            <p>Established an MIS system used on a daily basis by management and senior staff</p>
+            <p>Improved management visibility into daily company operations, thus improving decision making processes</p>
+            <p>Improved the HR pipeline for new and existing staff</p>
+            <p>Reduced the monthly digital platform expenses</p>
+            <p>Enhanced the digital security posture of the company.</p>
           </div>
         </div>
         <div class="panel panel-default">
@@ -157,7 +166,7 @@
             <i
               ><small><b>Action</b></small></i
             >
-            <p>Establish a new Organizational level Git code repository for the regional Innovation Team</p>
+            <p>Establish a new Organizational level code repository for the regional Innovation Team</p>
             <p>Built an open source containerized CI/CD web application for use in corporate demostrations and public presentations</p>
             <p>Do CI/CD presentations and demonstrations for clients and plubic gatherings (Cloud Expo Asia Hong Kong, Docker User Groups Hong Kong)</p>
             <p>Participated in the design and development of POC serverless single page app using ReactJS and AWS Lambda with the new Innovation squad for a client RFC</p>
