--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <i
               ><small><b>Result</b></small></i
             >
-            <p>Established an MIS system used on a daily basis by management and senior staff</p>
+            <p>Established an MIS system used on a daily basis by management and senior staff.</p>
             <p>Improved management visibility into daily company operations, thus improving decision making processes</p>
             <p>Improved the HR pipeline for new and existing staff</p>
             <p>Reduced the monthly digital platform expenses</p>
