--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
               ><small><b>Result</b></small></i
             >
             <p>Established an MIS system used on a daily basis by management and senior staff.</p>
-            <p>Improved management visibility into daily company operations, thus improving decision making processes</p>
-            <p>Improved the HR pipeline for new and existing staff</p>
-            <p>Reduced the monthly digital platform expenses</p>
+            <p>Improved management visibility into daily company operations, thus improving decision making processes.</p>
+            <p>Improved the HR pipeline for new and existing staff.</p>
+            <p>Reduced the monthly digital platform expenses.</p>
             <p>Enhanced the digital security posture of the company.</p>
           </div>
         </div>
@@ -193,22 +193,12 @@
             <p class="summary">AXA Group Solutions is an AXA Group company which serves most of AXA’s entities.</p>
             <br />
 
-<<<<<<< HEAD
-            <i><small><b>Problem</b></small></i> 
-            <p>Create a core Agile team to develop technical solutions for AXA&#39;s Asia region entities.</p>
-
-            <p>Develop HTTP RESTful APIs required for Asian regional systems integration.</p>
-
-            <p>Focus on Agile methodologies with disciplined work process, accountability, visibility and product deliveries.</p>
-
-=======
             <i
               ><small><b>Problem</b></small></i
             >
-            <p>Create a core Agile team to develop technical solutions for AXA Asia region entities.</p>
-            <p>Develop HTTP Rest APIs required Asian regional systems integration.</p>
-            <p>Focus on Agile methodologies with disciplined work process, accountability, visibility and product deliverys.</p>
->>>>>>> master
+            <p>Create a core Agile team to develop technical solutions for AXA&#39;s Asia region entities.</p>
+            <p>Develop HTTP RESTful APIs required for Asian regional systems integration.</p>
+            <p>Focus on Agile methodologies with disciplined work process, accountability, visibility and product deliveries.</p>
             <p>Liaise and work with other teams, stakeholders, Actuaries, and eCommerce partners.</p>
             <br />
 
@@ -217,34 +207,17 @@
             >
             <p>Implement Restful HTTP APIs with Node.JS using Strongloop API technology.</p>
             <p>Develop secure productive local containerized developer work environments enabling rapid onboarding.</p>
-<<<<<<< HEAD
-
-            <p>Establish Continuous Integration and Continuous Delivery piplelines that incorporate local pre-release penetration testing and code analysis.</p>
-
+            <p>Establish Continuous Integration and Continuous Delivery pipelines that incorporate local pre-release penetration testing and code analysis.</p>
             <p>Focus on always-on infrastructure, ensuring strong security, flexible automation and service resilience.</p>
-
             <p>Establish Docker build process deploying into a regional data center running the OpenShift platform for container orchestration.</p>
-
             <p>Create Site Reliability Playbooks for application maintenance and support.</p>
-            <br>
-=======
-            <p>Establish Continous Ingration and Delivery piplelines that incorporate local pre-release penetration testing.</p>
-            <p>Docker build process deployed into a regional data center running on the OpenShift platform for container orchestration.</p>
-            <p>Develop Site Reliability Playbooks for application maintenance and support.</p>
             <br />
->>>>>>> master
 
             <i
               ><small><b>Result</b></small></i
             >
             <p>Successfully delivered phase one the digital transformation process for regional identity management and access.</p>
-<<<<<<< HEAD
-
             <p>Set an example of solid DevOps and Engineering best practices, workflow and delivery for other teams to learn from and also use.</p>
-
-=======
-            <p>Set an example of proper devops and engineering practices, workflow and delivery for other teams to learn from and also use.</p>
->>>>>>> master
             <p>Mentored junior developers helping to upskill and improve their skills and critical thinking.</p>
           </div>
         </div>
