--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             <p>Improved the HR pipeline for new and existing staff</p>
             <p>Reduced the monthly digital platform expenses</p>
             <p>Enhanced the digital security posture of the company.</p>
+            <p>Development of a CI/CD architecture that enabled developers more quickly and independently develop, test, and deploy value safely and reliably.</p>
           </div>
         </div>
         <div class="panel panel-default">
