--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
             >
             <p>A rapidly growning International BPO company needing a Management Information System (MIS) for help with decision-making.</p>
             <p>The MIS system requirements also are to aide the coordination, control, analysis, and visualization of the organizations Operations and HR data.</p>
-            <p>Centralized web app(s) required for key MIS components and UI</p>
-            <p>An existing monolithic web application to be migrated to the AWS platform</p>
-            <p>A Business Intelligence pipepline is needed to ingest, store and report on the BPO client projects</p>
+            <p>Centralized web app(s) required for key MIS components and UI.</p>
+            <p>An existing monolithic web application to be migrated to the AWS platform.</p>
+            <p>A Business Intelligence pipepline is needed to ingest, store and report on the BPO client projects.</p>
             <br />
 
             <i
@@ -117,10 +117,14 @@
             >
             <p>Create a Restful AWS Lambda API service to generate advanced SQL powered CSV reports for Google Sheets ingestion</p>
             <p>Use Google Apps Script to generate dynamice Pivot table reports for key data</p>
-            <p>Create a ReactJS static site using GatsbyJS for secure hosting of micro web apps on the Caspio.com platform</p>
+            <p>Develop and deploy a ReactJS static site using GatsbyJS for secure hosting of micro web apps on the Caspio.com platform</p>
             <p>Migrate an existing monolitic PHP/Jquery web aplication to the AWS platform, implemented with Devops configuration management and a CI/CD pipeline</p>
             <p>Architect and create new multi enviroment stage AWS VPC environments, migrate to AWS RDS, implement proper application secrets management</p>
-            <p>Develop resilient and cost effective data backup and disaster recovery processes</p>
+            <p>Implement web development and web operations procedures to perform operations as code and to practice failure senarios</p>
+            <p>Build and deploy distinct separate CI/CD processes for serverless APIs, single page apps and monolithic web apps</p>
+            <p>Create an automated end-to-end testing suite to enable rapid feedback on the flow of changes into production</p>
+            <p>Develop resilient and cost effective data backup and scheduled tested disaster recovery procedures</p>
+            <p>Create technical onboarding materials and establish best practice processes for new team members</p>
             <br />
 
             <i
@@ -129,9 +133,9 @@
             <p>Established an MIS system used on a daily basis by management and senior staff.</p>
             <p>Improved management visibility into daily company operations, thus improving decision making processes</p>
             <p>Improved the HR pipeline for new and existing staff</p>
-            <p>Reduced the monthly digital platform expenses</p>
-            <p>Enhanced the digital security posture of the company.</p>
+            <p>Reduced the monthly technology portfolio expenses</p>
             <p>Development of a CI/CD architecture that enabled developers more quickly and independently develop, test, and deploy value safely and reliably.</p>
+            <p>Enhanced and evolved the technology portfolio to deliver higher performance, reliability, security posture and operational business value.</p>
           </div>
         </div>
         <div class="panel panel-default">
