--- a/index.html
+++ b/index.html
@@ -93,11 +93,56 @@
         <h1>Work Experience</h1>
         <div class="panel panel-default">
           <div class="panel-heading">
+            <h3 class="panel-title"><b>Technical Consultant</b></h3>
+          </div>
+          <div class="panel-body">
+            <p><a href="https://www.linkedin.com/company/axa-group-operations/" target="_blank">AXA Group Operations Philippines</a></p>
+            <p>October, 2020 to December, 2021 <i>( 1 year , 2 months )</i> - Philippines</p>
+
+            <p class="summary">As an integral part of AXA, we create innovative technology and data solutions to help AXA fulfil its ambition of being a customer-focused, tech-led company.</p>
+            <p class="summary">Axa Group Operations is a young and dynamic division launched in 2019 and comprises 8,000 employees across 17 countries all around the globe from Paris to Pune.</p>
+            <br />
+
+            <i
+              ><small><b>Problem</b></small></i
+            >
+            <p>More adoption and successful implementation of all DevOps processes and team identity.</p>
+            <p>Lack of defined struture in technical and soft skills requirement in development teams.</p>
+            <p>Non production cloud environments needing to be defined and managed.</p>
+            <p>Increase modern source and version control adoption.</p>
+            <p>Legacy web applications needing authorization and access control refactoring.</p>
+            <p>Peer review of new move to cloud initiatives, and write up reports of results.</p>
+            <br />
+
+            <i
+              ><small><b>Action</b></small></i
+            >
+            <p>Create a regional monthly DevOps forum, Promote the benefits of DevOps, Introduce the IEEE Standard for DevOps IEEE 2675-2021.</p>
+            <p>Build interal hands-on traning courses centered around OpenShift and AWS native services</p>
+            <p>Define a regional Developer Standard for both internal and external vendor development resources</p>
+            <p>Develop POC infrastructure as code systems and processes for data export and import into AWS cloud databases</p>
+            <p>Create a central repository initiative in github and introduce it to technical team leads.</p>
+            <p>Perform full stack web development and Kubernetes/Openshift deployment upgrades and updates.</p>
+            <p>Perform project reviews and reports - code, deployment processes, backup and disaster recovery.</p>
+            <br />
+
+            <i
+              ><small><b>Result</b></small></i
+            >
+            <p>Improved development teams and leads on Container systems and implement CI deployment pipelines with a focus on industry best practices and standards.</p>
+            <p>Updated, migrated and upgraded legacy web apps to a newer Openshift platform</p>
+            <p>Reduced running costs through implementation of ondemand resources instead of provisioned.</p>
+            <p>Set the group service on a path toward improved development teams and improved cloud native systems</p>
+            <p>Instilled a culture of continuous improvement in the team and the organization.</p>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
             <h3 class="panel-title"><b>Fullstack Web Developer, AWS Solutions Architect, Devops Engineer, Web Operations, Business Analyst</b></h3>
           </div>
           <div class="panel-body">
             <p><a href="http://grandredlimited.com" target="_blank">Grand Red Consulting</a></p>
-            <p>July, 2019 to present <i></i> - Hong Kong</p>
+            <p>July, 2019 to September, 2020 <i>( 1 year , 2 months )</i> - Hong Kong</p>
 
             <p class="summary">Grand Red Limited provides Software Development, Software Consulting and Back Office Business Processes.</p>
             <br />
